math-core/src/snapshots/math_core__parse__tests__mathit_func.snap
---
source: math-core/src/parse.rs
expression: "\\mathit{ab \\log cd}"
---
[
  TextTransform(
    tf: Transform(Italic),
    content: Row(
      nodes: [
        CollectedLetters("ab"),
        PseudoOp(
          attr: None,
          left: ThreeMu,
          right: ThreeMu,
          name: "log",
        ),
        CollectedLetters("cd"),
      ],
      attr: None,
    ),
  ),
]
