math-core/src/snapshots/math_core__parse__tests__mathit_greek.snap
---
source: math-core/src/parse.rs
expression: "\\mathit{\\Alpha\\Beta}"
---
[
  TextTransform(
    tf: Transform(Italic),
    content: CollectedLetters("ΑΒ"),
  ),
]
