math-core/src/snapshots/math_core__parse__tests__mathit_of_max.snap
---
source: math-core/src/parse.rs
expression: "\\mathit{ab \\max \\alpha\\beta}"
---
[
  TextTransform(
    tf: Transform(Italic),
    content: Row(
      nodes: [
        IdentifierStr("ab"),
        PseudoOp(
          attr: None,
          left: Some(ThreeMu),
          right: Some(ThreeMu),
          name: "max",
        ),
        IdentifierStr("αβ"),
      ],
      attr: None,
    ),
  ),
]
