math-core/src/snapshots/math_core__parse__tests__mathrm_mathit_nested.snap
---
source: math-core/src/parse.rs
expression: "\\mathrm{\\mathit{a}b}"
---
[
  Row(
    nodes: [
      IdentifierChar('𝑎', Default),
      IdentifierChar('b', ForcedUpright),
    ],
    attr: None,
  ),
]
