math-core/src/snapshots/math_core__parse__tests__mathrm_sqrt.snap
---
source: math-core/src/parse.rs
expression: "\\mathrm{\\sqrt xy}"
---
[
  TextTransform(
    tf: Normal,
    content: Row(
      nodes: [
        Sqrt(IdentifierChar('x', Default)),
        IdentifierChar('y', Default),
      ],
      attr: None,
    ),
  ),
]
