math-core/src/snapshots/math_core__parse__tests__mathrm_subscript.snap
---
source: math-core/src/parse.rs
expression: "\\mathrm{x_x y_y}"
---
[
  TextTransform(
    tf: Normal,
    content: Row(
      nodes: [
        Subscript(
          target: IdentifierChar('x', Default),
          symbol: IdentifierChar('x', Default),
        ),
        Subscript(
          target: IdentifierChar('y', Default),
          symbol: IdentifierChar('y', Default),
        ),
      ],
      attr: None,
    ),
  ),
]
