math-core/src/snapshots/math_core__parse__tests__number_after_circumflex.snap
---
source: math-core/src/parse.rs
expression: x^12
---
[
  Superscript(
    target: SingleLetterIdent('x', false),
    symbol: Number("1"),
  ),
  Number("2"),
]
