math-core/src/snapshots/math_core__parse__tests__number_after_lim.snap
---
source: math-core/src/parse.rs
expression: "\\sum\\limits_12"
---
[
  Underset(
    symbol: Number("1"),
    target: Operator(Op('∑'), Some(NoMovableLimits)),
  ),
  Number("2"),
]
